update icon and splash screen

--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Événements" tabIcon="calendar"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Évènements" tabIcon="calendar"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Tâches" tabIcon="nuclear"></ion-tab>
 </ion-tabs>
