--- a/src/pages/events/events.html
+++ b/src/pages/events/events.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Événements
+      Évènements ({{date | date: 'dd/MM'}})
     </ion-title>
   </ion-navbar>
 </ion-header>
