--- a/src/pages/events/events.html
+++ b/src/pages/events/events.html
@@ -7,5 +7,9 @@
 </ion-header>
 
 <ion-content padding>
-
+  <ion-list>
+    <ion-item *ngFor="let event of events | async">
+      {{event.title}}
+    </ion-item>
+  </ion-list>
 </ion-content>
