--- a/src/pages/events/events.html
+++ b/src/pages/events/events.html
@@ -12,4 +12,7 @@
       {{event.title}}
     </ion-item>
   </ion-list>
+<button class="button button-float">
+        <ion-icon name="add" class="larger"></ion-icon>
+      </button>
 </ion-content>
