--- a/src/pages/events/events.html
+++ b/src/pages/events/events.html
@@ -8,11 +8,11 @@
 
 <ion-content padding>
   <ion-list>
-    <ion-item *ngFor="let event of events | async">
+    <ion-item *ngFor="let event of events">
       {{event.title}}
     </ion-item>
   </ion-list>
-<button class="button button-float">
+<button class="button button-float" (click)="addEvent()">
         <ion-icon name="add" class="larger"></ion-icon>
       </button>
 </ion-content>
