--- a/src/pages/events/events.html
+++ b/src/pages/events/events.html
@@ -8,7 +8,7 @@
 
 <ion-content padding>
   <ion-list>
-    <ion-item *ngFor="let event of events">
+    <ion-item *ngFor="let event of events | orderBy: 'date','asc'">
       {{event.date | date: 'dd/MM HH:mm'}}
       <div class="event-text" [innerHTML]="event.title | newlineauto : 30"></div>
     </ion-item>
