--- a/src/pages/events/events.html
+++ b/src/pages/events/events.html
@@ -6,7 +6,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
   <ion-list>
     <ion-item *ngFor="let event of events | orderBy: 'date','asc'">
       {{event.date | date: 'dd/MM HH:mm'}}
