--- a/src/pages/events/events.html
+++ b/src/pages/events/events.html
@@ -9,8 +9,15 @@
 <ion-content>
   <ion-list>
     <ion-item *ngFor="let event of events | orderBy: 'date','asc'">
-      {{event.date | date: 'dd/MM HH:mm'}}
-      <div class="event-text" [innerHTML]="event.title | newlineauto : 30"></div>
+      <ion-grid>
+        <ion-row>
+          <ion-col col-11>{{event.date | date: 'dd/MM HH:mm'}}</ion-col>
+          <ion-col col-1><ion-icon name="trash" class="larger" (click)="removeEvent(event.id)"></ion-icon></ion-col>
+        </ion-row>
+        <ion-row>
+          <div class="event-text" [innerHTML]="event.title | newlineauto : 30"></div>
+        </ion-row>
+      </ion-grid>
     </ion-item>
   </ion-list>
 <button class="button button-float" (click)="showModal()">
